--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -83,9 +83,9 @@ jobs:
 
           # export
           echo "${SQLCL_HOME}/bin" >> $GITHUB_PATH
-          
-          mv $GITHUB_WORKSPACE/lbfiles /thayer/envs/${{ env.DB_ENV }}/dbinstances/${{ inputs.db-instance-name }}/
-          echo "lb update controller.xml" | sql ${{ secrets[env.DB_USER] }}/${{ secrets[env.DB_PASSWD] }}@${{ secrets[env.DB_TNSNAME] }}?TNS_ADMIN=/thayer/envs/${{ env.DB_ENV }}/dbinstances/${{ inputs.db-instance-name }}
+          rm -rf /thayer/envs/${{ env.DB_ENV }}/dbinstances/${{ env.DB_INST }}/
+          mv $GITHUB_WORKSPACE/lbfiles /thayer/envs/${{ env.DB_ENV }}/dbinstances/${{ env.DB_INST }}/
+          echo "lb update controller.xml" | sql ${{ secrets[env.DB_USER] }}/${{ secrets[env.DB_PASSWD] }}@${{ secrets[env.DB_TNSNAME] }}?TNS_ADMIN=/thayer/envs/${{ env.DB_ENV }}/dbinstances/${{ env.DB_INST }}
           
 
           
