--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -84,7 +84,7 @@ jobs:
           # export
           echo "${SQLCL_HOME}/bin" >> $GITHUB_PATH
           rm -rf /thayer/envs/${{ env.DB_ENV }}/dbinstances/${{ env.DB_INST }}/lbfiles
-          mv "${{ github.workspace }}/lbfiles" /thayer/envs/${{ env.DB_ENV }}/dbinstances/${{ env.DB_INST }}/
+          mv ${{ github.workspace }}/lbfiles /thayer/envs/${{ env.DB_ENV }}/dbinstances/${{ env.DB_INST }}/
           echo "lb update controller.xml" | sql ${{ secrets[env.DB_USER] }}/${{ secrets[env.DB_PASSWD] }}@${{ secrets[env.DB_TNSNAME] }}?TNS_ADMIN=/thayer/envs/${{ env.DB_ENV }}/dbinstances/${{ env.DB_INST }}
           
 
