--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -78,13 +78,13 @@ jobs:
           
           echo "SQLCL_HOME=/thayer/sqlcl/" >> "$GITHUB_ENV"
           # eval version
-          CMD="${SQLCL_HOME}/bin/sql -version"
-          eval "${CMD}"
-
-          # export
-          echo "${SQLCL_HOME}/bin" >> $GITHUB_PATH
+          # CMD="${SQLCL_HOME}/bin/sql -version"
+          # eval "${CMD}"
           rm -rf /thayer/envs/${{ env.DB_ENV }}/dbinstances/${{ env.DB_INST }}/lbfiles
           mv ${{ github.workspace }}/lbfiles /thayer/envs/${{ env.DB_ENV }}/dbinstances/${{ env.DB_INST }}/
+          # export
+          echo "${SQLCL_HOME}/bin" >> $GITHUB_PATH
+          
           echo "lb update controller.xml" | sql ${{ secrets[env.DB_USER] }}/${{ secrets[env.DB_PASSWD] }}@${{ secrets[env.DB_TNSNAME] }}?TNS_ADMIN=/thayer/envs/${{ env.DB_ENV }}/dbinstances/${{ env.DB_INST }}
           
 
