--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -19,9 +19,9 @@ on:
         required: true
         options:
         - 'oracleoci'
-        - 'development'
-        - 'staging'
-        - 'production'
+        - 'dev'
+        - 'qa'
+        - 'uat'
         default: 'oracleoci'
       db-instance-name:
         description: 'database instance name '
@@ -33,9 +33,15 @@ jobs:
     runs-on: self-hosted
     defaults:
       run:
-        working-directory: /thayer/envs/${{ github.event.inputs.envname || 'oracleoci' }}
+        working-directory: "/thayer/envs/${{ github.event.inputs.envname || 'oracleoci' }}"
         
-    environment: ${{ github.event.inputs.envname || 'oracleoci' }}
+        
+    environment: |-
+      ${{
+         github.ref_name == 'master' && 'oracleoci'
+         || github.ref_name == 'dev'    && 'dev'
+         || 'oracleoci'
+      }}
     name: SQLcl Integration
     env:
       OCI_CLI_USER: ${{ secrets.OCI_CLI_USER }}
