--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -32,9 +32,9 @@ on:
 jobs:
    my-instances:
     runs-on: self-hosted
-    defaults:
-      run:
-        working-directory: "${{ secrets.DB_ENV_BASEDIR }}/${{ github.event.inputs.envname || 'oracleoci' }}"
+    #defaults:
+      #run:
+        #working-directory: "echo ${{ secrets.DB_ENV_BASEDIR }}/${{ github.event.inputs.envname || 'oracleoci' }}"
         
         
     environment: |-
@@ -64,6 +64,7 @@ jobs:
       - name: Use Workspace
         run: echo $GITHUB_WORKSPACE
       - name: checkout dev
+        
         uses: actions/checkout@v4
         
         with:
