--- a/.github/workflows/ocidbclone.yml
+++ b/.github/workflows/ocidbclone.yml
@@ -18,7 +18,11 @@ on:
 jobs:
   my-instances:
     runs-on: self-hosted
-    environment: oracleoci
+    environment:  ${{
+         github.ref_name == 'master' && 'oracleoci'
+         || github.ref_name == 'dev'    && 'dev'
+         || 'oracleoci'
+      }}
     name: OCI DB CLONE
     env:
       OCI_CLI_USER: ${{ secrets.OCI_CLI_USER }}
