--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -78,7 +78,7 @@ jobs:
         with:
           command: ' oci db autonomous-database generate-wallet --autonomous-database-id ${{ secrets.OCI_INSTANCE_ID }} --file ${{ env.DB_INST }} --password ${{ env.DB_PASSWD }} --generate-type SINGLE
 '
-          silent: true
+          silent: false
       - name : setup java
         uses: actions/setup-java@v4
         with:
