--- a/.github/workflows/synchdbchangestotargetenv.yml
+++ b/.github/workflows/synchdbchangestotargetenv.yml
@@ -82,7 +82,7 @@ jobs:
         id: get-wallet-id
        
         with:
-          command: ' oci db autonomous-database generate-wallet --autonomous-database-id ${{ env.DB_INST_ID }} --file ${{ env.DB_INST }} --password ${{ env.DB_PASSWD }} --generate-type SINGLE
+          command: ' oci db autonomous-database generate-wallet --autonomous-database-id ${{ env.DB_INST_ID }} --file ${{ env.DB_INST }} --password ${{ secrets[env.DB_PASSWD] }} --generate-type SINGLE
 '
           silent: false
       - name : setup java
