--- a/.github/workflows/DBChangesSync.yml
+++ b/.github/workflows/DBChangesSync.yml
@@ -1,8 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-
 name: DBChangesSyncToTargetDBInstances
-
-
 # Controls when the workflow will run
 workflow_call:
    inputs:
@@ -25,10 +22,8 @@ workflow_call:
         required: true
         default: 'ocid1.autonomousdatabase.oc1.iad.anuwcljtntxkdlyambke7vkjliaugvioqteeobnp5q7vs5x6hdp56elwczla'
 
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-  
+# Allows you to run this workflow manually from the Actions tab
+workflow_dispatch:
     inputs:
       envname:
         type: choice
@@ -53,17 +48,15 @@ workflow_call:
 jobs:
    my-instances:
     runs-on: self-hosted
-    #defaults:
-      #run:
-        #working-directory: "echo ${{ secrets.DB_ENV_BASEDIR }}/${{ github.event.inputs.envname || 'oracleoci' }}"
-        
-        
-    environment: |-
-      ${{
-         github.ref_name == 'master' && 'oracleoci'
-         || github.ref_name == 'dev'    && 'dev'
-         || 'oracleoci'
-      }}
+      
+     
+    #environment: |-
+     # ${{
+     #    github.ref_name == 'master' && 'oracleoci'
+     #    || github.ref_name == 'dev'  && 'dev'
+      #   || 'oracleoci'
+     # }}
+    environment: ${{ github.event.inputs.envname }}
     name: SQLcl Integration
     env:
       OCI_CLI_USER: ${{ secrets.OCI_CLI_USER }}
