--- a/.github/workflows/devenv.yml
+++ b/.github/workflows/devenv.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: DevDBInstance-Sync
+name: DevDBInstance-Syn
 on:
   push:
     branches: [ "main" ]
