--- a/.github/workflows/devenv.yml
+++ b/.github/workflows/devenv.yml
@@ -28,11 +28,11 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   devinstances:
-    uses: "./.github/workflows/DBChangesSync.yml"
+    uses: './.github/workflows/DBChangesSync.yml'
     with:
-      envname: "oracleoci"
-      db-instance-name: "THAYERATP"
-      db-instance-id: "ocid1.autonomousdatabase.oc1.iad.anuwcljtntxkdlyambke7vkjliaugvioqteeobnp5q7vs5x6hdp56elwczla"
+      envname: 'oracleoci'
+      db-instance-name: 'THAYERATP'
+      db-instance-id: 'ocid1.autonomousdatabase.oc1.iad.anuwcljtntxkdlyambke7vkjliaugvioqteeobnp5q7vs5x6hdp56elwczla'
      
 
           
