--- a/.github/workflows/devenv.yml
+++ b/.github/workflows/devenv.yml
@@ -33,6 +33,7 @@ jobs:
       envname: 'oracleoci'
       db-instance-name: 'THAYERATP'
       db-instance-id: 'ocid1.autonomousdatabase.oc1.iad.anuwcljtntxkdlyambke7vkjliaugvioqteeobnp5q7vs5x6hdp56elwczla'
+    secrets: inherit
      
 
           
