--- a/.github/workflows/DBChangesSync.yml
+++ b/.github/workflows/DBChangesSync.yml
@@ -72,6 +72,7 @@ jobs:
          echo $GITHUB_WORKSPACE
          echo "DBPASSWD***"${{ env.DB_PASSWD }}
          echo "inputs***"${{ inputs.envname }}
+         echo "github user****"${{ github.actor }}
       - name: checkout dev
         uses: actions/checkout@v4
         with:
