--- a/.github/workflows/DBChangesSync.yml
+++ b/.github/workflows/DBChangesSync.yml
@@ -73,6 +73,7 @@ jobs:
          echo "DBPASSWD***"${{ env.DB_PASSWD }}
          echo "inputs***"${{ inputs.envname }}
          echo "github user****"${{ github.actor }}
+         echo "HOME***"$HOME
       - name: checkout dev
         uses: actions/checkout@v4
         with:
