--- a/.github/workflows/DBChangesSync.yml
+++ b/.github/workflows/DBChangesSync.yml
@@ -74,6 +74,7 @@ jobs:
          echo "inputs***"${{ inputs.envname }}
          echo "github user****"${{ github.actor }}
          echo "HOME***"$HOME
+         echo "userid***"$id
       - name: checkout dev
         uses: actions/checkout@v4
         with:
